Add TODO's Add producing guildId in payload Add Mapper interfaces for telegram module Add payload mappers for telegram module